--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <div class="container">
       <div class="row justify-content-between gy-5">
         <div class="col-lg-5 order-2 order-lg-1 d-flex flex-column justify-content-center align-items-center align-items-lg-start text-center text-lg-start">
-          <h2 data-aos="fade-up">Chef Ismael Isa Catering Company<br>Where food celebrates life!!!</h2>
+          <h2 data-aos="fade-up">Chef Ismael Catering Company<br>Where food celebrates life!!!</h2>
           <p data-aos="fade-up" data-aos-delay="100" style="text-align: justify; text-indent: 50px;">Chef Ishmael Isa is a highly regarded catering company. We serve delicious food using the best ingredients to ensure customer satisfaction. Our dishes are flavorful and prepared with care. We prioritize excellence in both taste and presentation, offering a delightful dining experience. Our focus is on providing exceptional service and a welcoming atmosphere, along with our top-quality, tasty food.</p>          
         </div>
         <div class="col-lg-5 order-1 order-lg-2 text-center text-lg-start">
@@ -124,7 +124,7 @@
           <div class="col-lg-5 d-flex align-items-end" data-aos="fade-up" data-aos-delay="300">
             <div class="content ps-0 ps-lg-5">
               <p class="fst-italic">
-                Chef Ismael Isa is a catering company that aims at providing satisfaction by serving high-quality delicious food. We are top-ranked by most of our customers who recognize us as the top cooks with very unique flavors that just make your weddings functions, Roracios, birthday parties, and luncheons just the best
+                Chef Ismael is a catering company that aims at providing satisfaction by serving high-quality delicious food. We are top-ranked by most of our customers who recognize us as the top cooks with very unique flavors that just make your weddings functions, Roracios, birthday parties, and luncheons just the best
               </p>
               <h4 style="text-align: center;"><strong>MISSION:</strong></h4>
               <p style="text-align: justify; text-indent: 50px;">
@@ -133,7 +133,7 @@
                 <p style="text-align: justify; text-indent: 50px;">
                   We strive to establish ourselves as the leading caterers in the industry, renowned and highly regarded for our exceptional services, innovative culinary offerings, and the ability to deliver distinctive and unparalleled flavors that leave a lasting impression on our valued customers.
                 </p>
-                <p style="text-align: justify; text-indent:50px ;">At Chef Ismael Isa Catering Company, we have special and delicious recipes that are one-of-a-kind. Our team works hard to create amazing dishes that will make your taste buds happy. We invite you to try our recipes and experience the unique flavors that will leave you wanting more.
+                <p style="text-align: justify; text-indent:50px ;">At Chef Ismael  Catering Company, we have special and delicious recipes that are one-of-a-kind. Our team works hard to create amazing dishes that will make your taste buds happy. We invite you to try our recipes and experience the unique flavors that will leave you wanting more.
                 </p>
 
               <div class="position-relative mt-4">
@@ -161,8 +161,8 @@
             <div class="why-box">
               <h3>Why Choose chef Ismael?</h3>
               <p style="text-align:justify; text-indent:50px;">
-                Chef Ismael ISa will provide you with very unique recipes that which will ensure that your food has not only a unique flavour but also stands out to be the best. Bring you family together by cooking them the best food that other families cannot offer. 
-               Chef Ismael Isa company also gives you a chance for free consultation at any time of the day. All you need to do is palce a call and it will be answered. We also deliver already cooked food at the comfort of your home. 
+                Chef Ismael  will provide you with very unique recipes that which will ensure that your food has not only a unique flavour but also stands out to be the best. Bring you family together by cooking them the best food that other families cannot offer. 
+               Chef Ismael  company also gives you a chance for free consultation at any time of the day. All you need to do is palce a call and it will be answered. We also deliver already cooked food at the comfort of your home. 
              </p>
               <div class="text-center">
                 <a href="D:\Desktop\Chef Ismael ISa\Index.html" class="more-btn">Learn More <i class="bx bx-chevron-right"></i></a>
