--- a/index.html
+++ b/index.html
@@ -117,34 +117,29 @@
         <div class="section-header">
           <h2>About Us</h2>
           <p>Learn More <span>About Us</span></p>
-        </div>
-
+        </div>      
         <div class="row gy-4">
-
-          <div class="col-lg-5 d-flex align-items-end" data-aos="fade-up" data-aos-delay="300">
-            <div class="content ps-0 ps-lg-5">
-              <p class="fst-italic">
-                Chef Ismael is a catering company that aims at providing satisfaction by serving high-quality delicious food. We are top-ranked by most of our customers who recognize us as the top cooks with very unique flavors that just make your weddings functions, Roracios, birthday parties, and luncheons just the best
-              </p>
-              <h4 style="text-align: center;"><strong>MISSION:</strong></h4>
-              <p style="text-align: justify; text-indent: 50px;">
-                We aim to make our customers happy by serving them delicious food made with top-notch ingredients. Our goal is to provide a diverse menu of tasty dishes that are prepared with care and attention to detail, ensuring customer satisfaction.
-                <h4 style="text-align: center;"><strong>VISION:</strong></h4>
-                <p style="text-align: justify; text-indent: 50px;">
-                  We strive to establish ourselves as the leading caterers in the industry, renowned and highly regarded for our exceptional services, innovative culinary offerings, and the ability to deliver distinctive and unparalleled flavors that leave a lasting impression on our valued customers.
-                </p>
-                <p style="text-align: justify; text-indent:50px ;">At Chef Ismael  Catering Company, we have special and delicious recipes that are one-of-a-kind. Our team works hard to create amazing dishes that will make your taste buds happy. We invite you to try our recipes and experience the unique flavors that will leave you wanting more.
-                </p>
-
-              <div class="position-relative mt-4">
-                <video controls>
-                  <source src="assets/img/video-1.mp4" type="video/mp4">
-                  Your browser does not support the video tag.
-                </video>
-                
-              </div>
+          <div class="col-lg-7 position-relative about-img" style="background-image: url(assets/img/about.jpg) ;" data-aos="fade-up" data-aos-delay="150">
+            <div class="call-us position-absolute">
+              <h4><a href="tel:+254714318953">Click here to call</a></h4>
+              <p style="color: black;">+254 714 318953</p>
             </div>
           </div>
+          <div class="col-lg-5 d-flex align-items-end" data-aos="fade-up" data-aos-delay="300">
+            <div class="content ps-0 ps-lg-5">
+              <p class="fst-italic" style="text-align: justify; text-indent: 50px;">
+                Chef Ismael is a catering company that aims at providing satisfaction by serving high-quality delicious food. We are top-ranked by most of our customers who recognize us as the top cooks with very unique flavors that just make your weddings functions, Roracios, birthday parties, and luncheons just the best
+              </p>
+              <ul>
+                <li style="text-align: justify; text-indent: 50px;"> <b>MISSION:</b> We aim to make our customers happy by serving them delicious food made with top-notch ingredients. Our goal is to provide a diverse menu of tasty dishes that are prepared with care and attention to detail, ensuring customer satisfaction..</li>
+                <li style="text-align: justify; text-indent: 50px;"><b>Vision: </b>We strive to establish ourselves as the leading caterers in the industry, renowned and highly regarded for our exceptional services, innovative culinary offerings, and the ability to deliver distinctive and unparalleled flavors that leave a lasting impression on our valued customers.</li>                
+              </ul>
+              <p style="text-align: justify; text-indent: 50px;">
+                At Chef Ismael  Catering Company, we have special and delicious recipes that are one-of-a-kind. Our team works hard to create amazing dishes that will make your taste buds happy. We invite you to try our recipes and experience the unique flavors that will leave you wanting more.                
+              </p>              
+            </div>
+          </div>
+        </div>
         </div>
 
       </div>
@@ -216,7 +211,8 @@
               <span data-purecounter-start="0" data-purecounter-end="10" data-purecounter-duration="1" class="purecounter"></span>
               <p>Recipies</p>
             </div>
-          </div><!-- End Stats Item -->
+          </div>
+          <!-- End Stats Item -->
 
           <div class="col-lg-3 col-md-6">
             <div class="stats-item text-center w-100 h-100">
@@ -242,7 +238,8 @@
         </div>
 
       </div>
-    </section><!-- End Stats Counter Section -->
+    </section>
+    <!-- End Stats Counter Section -->
 
     <!-- ======= Menu Section ======= -->
     <section id="menu" class="menu">
