--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="img/favicon.png" rel="icon">
-  <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/favicon.jpg" rel="icon">
+  <link href="assets/img/apple-touch-icon.jpg" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -64,25 +64,25 @@
           <li><a href="#events">Events</a></li>
           <li><a href="#chefs">Chefs</a></li>
           <li><a href="#gallery">Gallery</a></li>
-          <li class="dropdown"><a href="Recipies/Recipies.html"><span>Recipies</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
+          <li class="dropdown"><a href="Recipies.html"><span>Recipies</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
               <li><a href="Snacks.html">Snacks</a></li>
-              <li class="dropdown"><a href="Recipies/Recipies.html"><span>All kinds of foods</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
+              <li class="dropdown"><a href="Recipies.html"><span>All kinds of foods</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
                 <ul>
-                  <li><a href="Recipies/Recipies.html">Ugali dishes</a></li>
-                  <li><a href="Recipies/Recipies.html">Swahili cuisine</a></li>
-                  <li><a href="Recipies/Recipies.html">Coastal Cuisine</a></li>
-                  <li><a href="Recipies/Recipies.html">Street Foods</a></li>
-                  <li><a href="Recipies/Recipies.html">Desserts and drinks</a></li>
-                  <li><a href="Recipies/Recipies.html">Soups and Stews</a></li>
+                  <li><a href="Recipies.html">Ugali dishes</a></li>
+                  <li><a href="Recipies.html">Swahili cuisine</a></li>
+                  <li><a href="Recipies.html">Coastal Cuisine</a></li>
+                  <li><a href="Recipies.html">Street Foods</a></li>
+                  <li><a href="Recipies.html">Desserts and drinks</a></li>
+                  <li><a href="Recipies.html">Soups and Stews</a></li>
                 </ul>
               </li>
-              <li><a href="Recipies/Recipies.html">Drinks</a></li>
+              <li><a href="Recipies.html">Drinks</a></li>
               <li><a href="about.html">Services</a></li>
               <li><a href="about.html">Portfolio</a></li>
             </ul>
           </li>
-          <li><a href="#contact">Contact</a></li>
+          
         </ul>
       </nav><!-- .navbar -->
 
@@ -175,7 +175,7 @@
                   <p> Our team works closely with you to design personalized menus that perfectly align with your preferences, dietary requirements, and event theme. We take pride in crafting delectable dishes that leave a lasting impression on your guests.</p>
                 </div>
               </div><!-- End Icon Box -->
-
+                 
               <div class="col-xl-4" data-aos="fade-up" data-aos-delay="300">
                 <div class="icon-box d-flex flex-column justify-content-center align-items-center">
                   <i class="bi bi-gem"></i>
@@ -854,7 +854,7 @@
         &copy; Copyright <strong><span>Chef Ismael Isa Catering Company</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
-        Designed by <a href="https://api.whatsapp.com/send?phone=+254757909044&text=Hello there">Mwatheka</a>
+        Designed by <a href="https://api.whatsapp.com/send?phone=+254757909044&text=Hello Mwtaheka, I want some help in web design   ">Mwatheka</a>
       </div>
     </div>
 
