--- a/about.html
+++ b/about.html
@@ -336,14 +336,14 @@ h1 {
       <div class="col-sm-4">
         <div class="thumbnail">
            <img src="pic 15.jpg" alt="Chicken">
-           <p><strong><a href="Salads.html" target="_blank">Salads</a></strong></p>
+           <p><strong><a href="Recipies.html" target="_blank">Salads</a></strong></p>
            <p>Salads</p>
         </div>
       </div>
       <div class="col-sm-4">
         <div class="thumbnail">
           <img src="pic 14.jpg" alt="Pilau">
-          <p><strong><a href="recipies.html">Any kind of food</a></strong></p>
+          <p><strong><a href="Rzecipies.html">Any kind of food</a></strong></p>
           <p>Very Tasty</p>
         </div>
       </div>
@@ -421,13 +421,7 @@ h1 {
             <li>Unveiling.</li>
           </ul>
         </div>
-        <div class="text-block">
-          <p>Useful Links</p>
-          <ul style="list-style-type: disc;">
-            <li><a href="register.html">REGISTER</a></li>
-            <li><a href="login.html">LOGIN</a></li>
-          </ul>
-        </div>
+        
       </div>
       </div>
     <a href="#myPage" title="To Top">
@@ -438,10 +432,7 @@ h1 {
 </div>
 </div>
 </footer>
-  <a href="https://api.whatsapp.com/send?phone=+254714318953&text=Hello Chef Ismael Isa" class="whatsapp-icon">
-    <img src="whatsapp.jpg" alt="WhatsApp Icon">
-  </a>
-<script>
+ <script>
   $(document).ready(function(){
     // Add smooth scrolling to all links in navbar + footer link
     $(".navbar a, footer a[href='#myPage']").on('click', function(event) {
