--- a/about.html
+++ b/about.html
@@ -343,7 +343,7 @@ h1 {
       <div class="col-sm-4">
         <div class="thumbnail">
           <img src="pic 14.jpg" alt="Pilau">
-          <p><strong><a href="Rzecipies.html">Any kind of food</a></strong></p>
+          <p><strong><a href="Recipies.html">Any kind of food</a></strong></p>
           <p>Very Tasty</p>
         </div>
       </div>
