--- a/Snacks.html
+++ b/Snacks.html
@@ -67,7 +67,7 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="Index.html">Home</a></li>
+        <li class="active"><a href="index.html">Home</a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">Projects</a></li>
         <li><a href="mailto:chefismaelisacatringcompany@gmail.com">Contact</a></li>
