--- a/Recipies/Biryani.html
+++ b/Recipies/Biryani.html
@@ -84,7 +84,7 @@
     <div class="col-sm-2 sidenav">
      
     </div>
-     <h1> Waru Bhajia</h1>
+     <h1> Biriyani Recipie</h1>
     <div class="col-sm-8 text-left"> 
       <h3>Ingredients:</h3>
     <ul>
@@ -103,7 +103,7 @@
       <li>Salt to taste</li>
     </ul>
       <hr>
-      <h2>Instructions:</h3>
+      <h3>Instructions:</h3>
     <ol>
       <li>Wash the basmati rice under cold water until the water runs clear. Soak the rice in water for 30 minutes, then drain.</li>
       <li>In a large pot, heat the ghee or vegetable oil over medium heat. Add the sliced onions and cook until golden brown. Remove half of the fried onions and set them aside for garnish.</li>
