--- a/Recipies.html
+++ b/Recipies.html
@@ -63,12 +63,12 @@
               <li><a href="Snacks.html">Snacks</a></li>
               <li class="dropdown"><a href="Recipies.html"><span>All kinds of foods</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
                 <ul>
-                  <li><a href="#">Ugali dishes</a></li>
-                  <li><a href="#">Swahili cuisine</a></li>
-                  <li><a href="#">Coastal Cuisine</a></li>
-                  <li><a href="#">Street Foods</a></li>
-                  <li><a href="#">Desserts and drinks</a></li>
-                  <li><a href="#">Soups and Stews</a></li>
+                  <li><a href="Recipies.html">Ugali dishes</a></li>
+                  <li><a href="Recipies.html">Swahili cuisine</a></li>
+                  <li><a href="Recipies.html">Coastal Cuisine</a></li>
+                  <li><a href="Recipies.html">Street Foods</a></li>
+                  <li><a href="Recipies.html">Desserts and drinks</a></li>
+                  <li><a href="recipies.html">Soups and Stews</a></li>
                 </ul>
               </li>
               <li><a href="#">Drinks</a></li>
@@ -120,6 +120,7 @@
                 <li><a href="Recipies/Nyama choma.html">Nyama Choma</a></li>
                 <li><a href="Recipies/Kachumbari.html">Kachumbari</a></li>
                 <li><a href="Recipies/Beef stew.html">Kenyan-style Beef Stew</a></li>
+                  <li><a href="Recipies/Creamed Spinach.html">Creamed Spinach</a></li>
               </ul>.
                 </div>
               </div><!-- End Icon Box -->
